# project-vdj-analysis-b-cell-clonotype-expansion

./: .env  .gitignore  README.md  cells_for_samples.RData  pyproject.toml
scripts/: demultiplexer.py  package_relevant_data.py  parallel_bracer_assemble.py  parallel_bracer_run.py  parallel_bracer_summarise.py
workbooks/: 1-introduction.Rmd  1-introduction.html  2-exploratory-data-analysis.Rmd  2-exploratory-data-analysis.html  2-exploratory-meta-data-analysis.html  2-preprocessing.html  3-bracer.html  3-preprocessing-of-raw-data.Rmd  3-preprocessing-of-raw-data.html  3-preprocessing-of-the-raw-data.html  4-bracer.Rmd  4-bracer.html  5-frequency-of-clonal-expansion.Rmd  5-frequency-of-clonal-expansion.html  6-isotype-analysis.Rmd  6-isotype-analysis.html  7-discussion.Rmd  7-discussion.html  8-summary.Rmd  8-summary.html  Introduction.Rmd  Introduction.html  annotation.RData  bracer.Rmd  cells_for_samples.rds  citations.bib  clonal-expansion-analysis.Rmd  conclusion.Rmd  discussion.Rmd  exploratory-data-analysis.Rmd  exploratory-data-analysis.html  exploratory-meta-data-analysis.Rmd  index.Rmd  introduction.Rmd  isotype-analysis.Rmd  preprocessing-of-raw-data.Rmd  preprocessing.Rmd  preprocessing.html  qc_bracer_annotation.Rmd  references.html  (+1 more)
workbooks/auto/: citations.el
