[tool.poetry]
name = "project-vdj-analysis"
version = "0.1.0"
description = "This is the python environment for the VDJ analysis project"
authors = ["Philip Hartout <philip.hartout@protonmail.com>"]
license = "BSD 3"

[tool.poetry.dependencies]
python = "^3.8"
joblib = "^1.0.0"
python-dotenv = "^0.15.0"
numpy = "^1.19.4"
tqdm = "^4.55.1"
ipython = "^7.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
